[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemy/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://enemy/enemy2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=4]
radius = 49.0

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.784314, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.216489, 0.216489 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.14252e-06, 5.75185e-06 )
scale = Vector2( 5.1, 5.1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -66.0
margin_right = 32.0
margin_bottom = -52.0
custom_styles/fg = SubResource( 3 )
max_value = 5.0

[node name="Rotator" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
